<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="update_list_posts">Update list</string>
    <string name="description_photo">Описание фото</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Choose photo</string>
    <string name="description_take_photo">Pick photo</string>
    <string name="menu_save">Save\n</string>
    <string name="sign_in">Sing in</string>
    <string name="sign_up">Sing up\n</string>
    <string name="sign_out">Sing out</string>
    <string name="enter">Enter in app</string>
    <string name="enter_text">Please enter your login and password</string>
    <string name="attention">"Please dont share your login and password other people "</string>
    <string name="attantion">Please dont share your login and password other people</string>
    <string name="emptyLoginOrPass">Login or pass can not empty</string>
    <string name="tryAgain">Try again,wrong login or pass</string>
    <string name="register_you_acc">"Register your accaunt "</string>
    <string name="register">"Register"</string>
    <string name="notification_user_new_post">Creat new post\n</string>
    <string name="notification_from_app">You have new notification\n</string>
    <string name="incorrect_pass">Incorrect password</string>
    <string name="something_wrong">Something wrong</string>
    <string name="error_task_cancelled">"Ошибка выполнения "</string>
    <string name="image_ad">ImageAd</string>
    <string name="back_button">back</string>
    <string name="new_post">New post</string>
    <string name="posts">Posts</string>
    <string name="event">Event</string>
    <string name="users">Users</string>
    <string name="save_button">Save button\n\n</string>
    <string name="choose_users">Choose users</string>
    <string name="post">Post</string>
    <string name="likers">Likers\n</string>
    <string name="mentioned">Mentioned</string>
    <string name="my_profile">Profile</string>
    <string name="you">You</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="new_job">New job</string>
    <string name="Create">Create</string>
    <string name="emptyPositionOrName">"Emty position or name "</string>
    <string name="choose_period">Select period</string>
    <string name="date">Date</string>
    <string name="format">Format</string>
    <string name="accept">Accept</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="choose_type">Please choose format event</string>
    <string name="choose_date">Please choose date event</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="please_auth">Please signin or signup</string>
    <string name="set_msg_auth">You need auth your accaunt</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="dont_have_acc">Don\'t have an account? Register</string>
    <string name="incorrect_pass_or_login">Incorrect pass or login</string>
    <string name="name">Name</string>
    <string name="possition">Possition</string>
    <string name="link">Link</string>
    <string name="name_company">Name organization</string>
    <string name="edite">Edite</string>
    <string name="edit_event">Edite event</string>
</resources>