<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/unauthenticated">
        <item
            android:id="@+id/singin"
            android:title="@string/sign_in"
            app:showAsAction="never" />
        <item
            android:id="@+id/singup"
            android:title="@string/sign_up"
            app:showAsAction="never" />
    </group>
    <group android:id="@+id/authenticated">
        <item
            android:id="@+id/singout"
            android:title="@string/sign_out"
            app:showAsAction="never" />
        <item
            android:id="@+id/viewProfile"
            android:title="@string/my_profile"
            app:showAsAction="never" />
    </group>
</menu>

